Auto stash before merge of "master" and "origin/master"

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,8 +4,6 @@ project (benchmark LANGUAGES CXX)
 
 add_executable (benchmark main.cpp memmap.cpp)
 
-set(CMAKE_CXX_STANDARD 17)
-
 if (MSVC_VERSION GREATER_EQUAL "1900")
     include(CheckCXXCompilerFlag)
     CHECK_CXX_COMPILER_FLAG("/std:c++latest" _cpp_latest_flag_supported)
@@ -16,3 +14,13 @@ endif()
 
 set_property(TARGET benchmark PROPERTY CXX_STANDARD 17)
 set_property(TARGET benchmark PROPERTY CXX_STANDARD_REQUIRED ON)
+
+# Modify compile flags to change optimization level from O3 to O2
+string(REGEX REPLACE "([\\/\\-]O)3" "\\12"
+  CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")
+string(REGEX REPLACE "([\\/\\-]O)3" "\\12"
+  CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE}")
+string(REGEX REPLACE "([\\/\\-]O)3" "\\12"
+  CMAKE_CXX_FLAGS_MINSIZEREL "${CMAKE_CXX_FLAGS_MINSIZEREL}")
+string(REGEX REPLACE "([\\/\\-]O)3" "\\12"
+  CMAKE_CXX_FLAGS_RELWITHDEBINFO "${CMAKE_CXX_FLAGS_RELWITHDEBINFO}")
